--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "repository": "https://github.com/victor-magaldi/nodejs-tasklist.git",
   "author": "victor de souza magaldi <victmagaldi@hotmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon src/server.js"
+  },
   "dependencies": {
     "express": "^4.18.1",
     "nodemon": "^2.0.19"
